--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,11 +1,4 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -17,7 +10,6 @@
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
@@ -35,4 +27,13 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.form{
+  background-color: aquamarine;
+  border-radius: .2em;
+  padding: 4em;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
 }
