--- a/frontend/src/Form.css
+++ b/frontend/src/Form.css
@@ -368,7 +368,7 @@
     --primary-200: #c1beff;
     --primary-300: #a29dff;
     --primary-400: #837dff;
-    --primary-500: #645cff;
+    --primary-500: #42acdd;
     --primary-600: #504acc;
     --primary-700: #3c3799;
     --primary-800: #282566;
