--- a/frontend/src/Form.css
+++ b/frontend/src/Form.css
@@ -418,7 +418,7 @@
   
   body {
     
-    background-color: #282c34;
+    /*background-color: #282c34;*/
     font-family: var(--bodyFont);
     font-weight: 400;
     line-height: 1.75;
@@ -532,7 +532,7 @@
   }
   /* form */
   .App-header {
-    background-color: #282c34;
+    /*background-color: #282c34;*/
     min-height: 100vh;
     display: flex;
     align-items: center;
