--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,24 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.ronewa{
+  margin-right: 80px !important;
+}
+
+#intro {
+  background-image: url(https://mdbootstrap.com/img/new/fluid/city/008.jpg);
+ 
+}
+/* Height for devices larger than 576px */
+
+
+
+
+.tt{
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.navbar .nav-link {
+  color: #fff !important;
+}
+
