--- a/frontend/src/Form.css
+++ b/frontend/src/Form.css
@@ -624,9 +624,9 @@
   .submit-btn {
     margin-top: 0.5rem;
   }
-  .container {
+  /*.container {
     display: flex;
     justify-content: center;
     margin-top: 2rem;
     gap: 1rem;
-  }
+  }*/
