--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,7 +7,6 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
 .form{
   background-color: aquamarine;
   border-radius: .2em;
@@ -15,4 +14,15 @@
   margin: 0 auto;
   justify-content: center;
   align-items: center;
+}
+.preloader {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 999999;
+  background-color: #ffffff;
+  background-position: center center;
+  background-repeat: no-repeat;
 }
