--- a/frontend/src/pages/medicine.css
+++ b/frontend/src/pages/medicine.css
@@ -48,6 +48,16 @@
   background: #f2f2f2;
 }
 
+.form-select-lg{
+  margin: 10px 0 6px 0;
+  padding: 14px;
+  font-size: 16px;
+  border: 0;
+  font-family: "Roboto", sans-serif;
+  border-radius: .25rem;
+  background: #f2f2f2;
+}
+
 span {
   font-family: "Roboto", sans-serif;
   font-size: 14px;
