--- a/frontend/src/pages/Dashboard.css
+++ b/frontend/src/pages/Dashboard.css
@@ -15,11 +15,7 @@ body {
   .sidebar {
     position: fixed;
     top: 0;
-    /* rtl:raw:
-    right: 0;
-    */
     bottom: 0;
-    /* rtl:remove */
     left: 0;
     z-index: 100; /* Behind the navbar */
     padding: 48px 0 0; /* Height of navbar */
@@ -27,9 +23,19 @@ body {
   }
   
   @media (max-width: 767.98px) {
-    .sidebar {
+    /*.sidebar {
       top: 5rem;
+    }*/
+    .logout{
+      margin-right: 10px !important;
+      padding-right: 15px !important;
+      color: red;
     }
+  }
+
+  .navbar-orange{
+    background-color:#fd7e14;
+    color:#1f2d3d;
   }
   
   .sidebar-sticky {
