--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,27 +1,24 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css");
+html {
+  font-size: 100%;
+}
+*,
+::after,
+::before {
+  box-sizing: border-box;
+}
 body {
   margin: 0;
+  font-weight: 400;
+  line-height: 1.75;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-
-}
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
 .ronewa{
   margin-right: 80px !important;
 }
 
-#intro {
-  background-image: url(https://mdbootstrap.com/img/new/fluid/city/008.jpg);
-  /*background-image: url(./images/south_africa.jpg);*/
-}
-/* Height for devices larger than 576px */
-.tt{
-  background-color: rgba(0, 0, 0, 0.8);
-}
 .navbar .nav-link {
   color: #fff !important;
 }
