--- a/frontend/src/pages/medicine/medicine.css
+++ b/frontend/src/pages/medicine/medicine.css
@@ -1,20 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
-
-/*body {
-  background: #131313;
-  display: flex;
-  min-height: 100vh;
-  justify-content: center;
-  align-items: center;
-}
-
-.form-container {
-  width: 360px;
-  background-color: #2c2c2e;
-  margin: auto;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-  padding: 10px;
-}*/
+/*@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600&family=Montserrat&display=swap');*/
 
 .register-form {
   display: flex;
@@ -28,9 +13,6 @@
   background-color: #3f89f8;
   padding: 15px;
   color: white;
-}
-.form-label{
-  font-family: "Roboto", sans-serif;
 }
 
 .form-field {
@@ -71,7 +53,6 @@ span {
 input {
   background: #f2f2f2;
 }
-
 .error {
   border-style: solid;
   border: 2px solid #ffa4a4;
